--- a/lojavirtual/Dockerfile
+++ b/lojavirtual/Dockerfile
@@ -1,5 +1,5 @@
 FROM amazoncorretto:21
-
+Expose 8080
 COPY target/lojavirtual-0.0.1-SNAPSHOT.jar /app.jar
 
 ENTRYPOINT ["java", "-jar", "/app.jar"]
